prevented textarea from extending beyond its borders when stretched

--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ h1 {
 
 textarea {
   width: 99%;
+  max-width: 491px;
 }
 
 #sucks {
